# MicroPython_BMI160

./: README.rst  examples.json  package.json  pyproject.toml
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: bmi160_acc_datarate.py  bmi160_acce_datarange.py  bmi160_gyro_datarate.py  bmi160_gyro_range.py  bmi160_gyro_simpletest.py  bmi160_simpletest.py  bmi160_temperature.py
micropython_bmi160/: bmi160.py
